--- a/react-app-project/src/index.css
+++ b/react-app-project/src/index.css
@@ -16,3 +16,11 @@ h2 {
   margin-bottom: 30px;
   font-size: 48px;
 }
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1024px;
+  margin: 0 auto;
+}
