--- a/react-app-project/src/index.css
+++ b/react-app-project/src/index.css
@@ -13,7 +13,6 @@ body {
 h2 {
   color: #f3f3f3;
   text-align: center;
-  margin-bottom: 30px;
   font-size: 48px;
 }
 
@@ -27,4 +26,10 @@ h2 {
 
 .card {
   border: 2px solid red;
+  border: 1px solid #4b5362;
+  padding: 20px;
+  margin: 10px;
+  background-color: #31363f; 
+  border-radius: 10px;
+  min-height: 100px;
 }
